--- a/infrastructure/production/authentik/ingressConfig.yaml
+++ b/infrastructure/production/authentik/ingressConfig.yaml
@@ -1,43 +1,43 @@
 apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
-  name: authentic
-  namespace: authentic
+  name: authentik
+  namespace: authentik
   annotations:
     kubernetes.io/ingress.class: traefik-external
 spec:
   entryPoints:
     - websecure
   routes:
-    - match: Host(`authentic.vandelocht.uk`)
+    - match: Host(`authentik.vandelocht.uk`)
       kind: Rule
       services:
-        - name: authentic
+        - name: authentik-server
           port: 80
       middlewares:
-        - name: svc-authentic-headers
+        - name: svc-authentik-headers
   tls:
-    secretName: authentic-vandelocht-uk-production-tls
+    secretName: authentik-vandelocht-uk-production-tls
 ---
 apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
-  name: authentic-vandelocht-uk
-  namespace: authentic
+  name: authentik-vandelocht-uk
+  namespace: authentik
 spec:
-  secretName: authentic-vandelocht-uk-production-tls
+  secretName: authentik-vandelocht-uk-production-tls
   issuerRef:
     name: letsencrypt-production
     kind: ClusterIssuer
-  commonName: "authentic.vandelocht.uk"
+  commonName: "authentik.vandelocht.uk"
   dnsNames:
-    - "authentic.vandelocht.uk"
+    - "authentik.vandelocht.uk"
 ---
 apiVersion: traefik.io/v1alpha1
 kind: Middleware
 metadata:
-  name: svc-authentic-headers
-  namespace: authentic
+  name: svc-authentik-headers
+  namespace: authentik
 spec:
   headers:
     browserXssFilter: true
