--- a/infrastructure/production/traefik/config/ingressConfig.yaml
+++ b/infrastructure/production/traefik/config/ingressConfig.yaml
@@ -12,8 +12,8 @@ spec:
     - match: Host(`traefik.lan.vandelocht.uk`)
       kind: Rule
       middlewares:
-        - name: forward-auth-keycloak
-          namespace: oauth2proxy
+        - name: authentik
+          namespace: traefik
       services:
         - name: api@internal
           kind: TraefikService
@@ -42,3 +42,27 @@ metadata:
 spec:
   basicAuth:
     secret: traefik-dashboard-auth
+---
+apiVersion: traefik.io/v1alpha1
+kind: Middleware
+metadata:
+  name: authentik
+  namespace: traefik
+spec:
+  forwardAuth:
+    # This address should point to the cluster endpoint provided by the kubernetes service, not the Ingress.
+    address: http://authentik-server.authentik.svc.cluster.local:80/outpost.goauthentik.io/auth/traefik
+    trustForwardHeader: true
+    authResponseHeaders:
+      - X-authentik-username
+      - X-authentik-groups
+      - X-authentik-entitlements
+      - X-authentik-email
+      - X-authentik-name
+      - X-authentik-uid
+      - X-authentik-jwt
+      - X-authentik-meta-jwks
+      - X-authentik-meta-outpost
+      - X-authentik-meta-provider
+      - X-authentik-meta-app
+      - X-authentik-meta-version
