--- a/monitoring/controllers/kube-prometheus-stack/release.yaml
+++ b/monitoring/controllers/kube-prometheus-stack/release.yaml
@@ -89,21 +89,19 @@ spec:
         server:
           root_url: "https://grafana.lan.vandelocht.uk"
         auth:
-          # disable_login_form: true # Redirects all users to OIDC login
-          disable_signout_menu: false
+          signout_redirect_url: "https://authentik.vandelocht.uk/application/o/grafana/end-session/"
+          oauth_auto_login: true
+          # disable_signout_menu: false
         auth.generic_oauth:
+          name: authentik
           enabled: true
-          name: Keycloak
-          allow_sign_up: true
-          client_id: "grafana"
-          scopes: "openid profile email offline_access roles"
-          email_attribute_path: email
-          login_attribute_path: username
-          name_attribute_path: full_name
-          auth_url: "https://keycloak.vandelocht.uk/realms/k8s/protocol/openid-connect/auth"
-          token_url: "https://keycloak.vandelocht.uk/realms/k8s/protocol/openid-connect/token"
-          api_url: "https://keycloak.vandelocht.uk/realms/k8s/protocol/openid-connect/userinfo"
-          role_attribute_path: "contains(realm_access.roles[*], 'grafana-admin') && 'Admin' || contains(realm_access.roles[*], 'grafana-editor') && 'Editor' || 'Viewer'"
+          client_id: "ZN3JTEtodC2h2DkLXD6HGRFENe6X7tB63eoRFnbp"
+          scopes: "openid profile email"
+          auth_url: "https://authentik.vandelocht.uk/application/o/authorize/"
+          token_url: "https://authentik.vandelocht.uk/application/o/token/"
+          api_url: "https://authentik.vandelocht.uk/application/o/userinfo/"
+          # Optionally map user groups to Grafana roles
+          role_attribute_path: contains(groups, 'Grafana Admins') && 'Admin' || contains(groups, 'Grafana Editors') && 'Editor' || 'Viewer'
       defaultDashboardsEnabled: false
       admin:
         existingSecret: "grafana-secret"
