--- a/infrastructure/production/pihole/ingressConfig.yaml
+++ b/infrastructure/production/pihole/ingressConfig.yaml
@@ -12,7 +12,7 @@ spec:
     - match: Host(`pihole.lan.vandelocht.uk`)
       kind: Rule
       services:
-        - name: pihole-svc
+        - name: pihole-web
           port: 80
       middlewares:
         - name: svc-pihole-headers
