--- a/clusters/staging/infrastructure/network/pihole.yaml
+++ b/clusters/staging/infrastructure/network/pihole.yaml
@@ -21,3 +21,28 @@ spec:
   path: ./infrastructure/production/pihole
   prune: true
   wait: true
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: pihole-conjobs
+  namespace: flux-system
+spec:
+  decryption:
+    provider: sops
+    secretRef:
+      name: sops-age
+  dependsOn:
+    - name: traefik
+    - name: cloudnative-pg
+    - name: metallb
+    - name: pihole
+  interval: 1h
+  retryInterval: 1m
+  timeout: 5m
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
+  path: ./infrastructure/production/pihole/cronjobs
+  prune: true
+  wait: true
