--- a/infrastructure/production/pihole/cronjobs/manifest.yaml
+++ b/infrastructure/production/pihole/cronjobs/manifest.yaml
@@ -20,16 +20,44 @@ spec:
                   value: "http://pihole-web|"
                 - name: FULL_SYNC
                   value: "false"
-                - name: RUN_GRAVITY
+                - name: SYNC_CONFIG_DNS
                   value: "true"
+                - name: SYNC_CONFIG_DNS_EXCLUDE
+                  value: "upstreams,piholePTR,domainNeeded,domain,bogusPriv,dnssec,listeningMode,revServers,cache.size,reply.host.force4,reply.host.IPv4"
+                - name: SYNC_CONFIG_RESOLVER
+                  value: "true"
+                - name: SYNC_CONFIG_DATABASE
+                  value: "true"
+                - name: SYNC_CONFIG_DATABASE_EXCLUDE
+                  value: "maxDBdays"
+                - name: SYNC_CONFIG_MISC
+                  value: "true"
+                - name: SYNC_CONFIG_MISC_EXCLUDE
+                  value: "privacylevel,etc_dnsmasq_d"
+                - name: SYNC_GRAVITY_GROUP
+                  value: "true"
+                - name: SYNC_GRAVITY_AD_LIST
+                  value: "true"
+                - name: SYNC_GRAVITY_AD_LIST_BY_GROUP
+                  value: "true"
+                - name: SYNC_GRAVITY_DOMAIN_LIST
+                  value: "true"
+                - name: SYNC_GRAVITY_DOMAIN_LIST_BY_GROUP
+                  value: "true"
+                - name: SYNC_GRAVITY_CLIENT
+                  value: "true"
+                - name: SYNC_GRAVITY_CLIENT_BY_GROUP
+                  value: "true"
+                - name: RUN_GRAVITY
+                  value: "false"
                 - name: CLIENT_SKIP_TLS_VERIFICATION
                   value: "true"
                 - name: TZ
                   value: "Europe/Berlin"
-                - name: SYNC_CONFIG_DNS
-                  value: "true"
-                - name: SYNC_CONFIG_DNS_EXCLUDE
-                  value: "listeningMode"
+                - name: CLIENT_TIMEOUT_SECONDS
+                  value: "60"
+                - name: CLIENT_RETRY_DELAY_SECONDS
+                  value: "60"
               args:
                 - "run"
               envFrom:
