--- a/infrastructure/base/pihole/manifest.yaml
+++ b/infrastructure/base/pihole/manifest.yaml
@@ -43,3 +43,34 @@ spec:
       enabled: true
     admin:
       enabled: false
+---
+apiVersion: helm.toolkit.fluxcd.io/v2
+kind: HelmRelease
+metadata:
+  name: pihole-1
+  namespace: pihole
+spec:
+  timeout: 15m
+  interval: 30m
+  install:
+    crds: Create
+    remediation:
+      retries: 3
+  upgrade:
+    crds: CreateReplace
+    remediation:
+      retries: 3
+  chart:
+    spec:
+      chart: pihole
+      version: "2.34.0"
+      sourceRef:
+        kind: HelmRepository
+        name: mojo2600
+        namespace: pihole
+      interval: 12h
+  values:
+    persistentVolumeClaim:
+      enabled: true
+    admin:
+      enabled: false
