--- a/infrastructure/production/pihole/cronjobs/manifest.yaml
+++ b/infrastructure/production/pihole/cronjobs/manifest.yaml
@@ -15,49 +15,53 @@ spec:
               image: ghcr.io/lovelaze/nebula-sync:v0.11.1
               env:
                 - name: PRIMARY
-                  value: "https://192.168.178.2|$(PIHOLE_PASSWORD_LXC)"
-                - name: REPLICAS
+                  # value: "https://192.168.178.2|$(PIHOLE_PASSWORD_LXC)"
                   value: "http://pihole-web|"
+                - name: REPLICAS
+                  value: "http://pihole-web-1|,http://pihole-web-2|"
+                  # value: "http://pihole-web|"
                 - name: FULL_SYNC
-                  value: "false"
-                - name: SYNC_CONFIG_DNS
                   value: "true"
-                - name: SYNC_CONFIG_DNS_EXCLUDE
-                  value: "upstreams,piholePTR,domainNeeded,domain,bogusPriv,dnssec,listeningMode,revServers,cache.size,reply.host.force4,reply.host.IPv4"
-                - name: SYNC_CONFIG_RESOLVER
-                  value: "true"
-                - name: SYNC_CONFIG_DATABASE
-                  value: "true"
-                - name: SYNC_CONFIG_DATABASE_EXCLUDE
-                  value: "maxDBdays"
-                - name: SYNC_CONFIG_MISC
-                  value: "true"
-                - name: SYNC_CONFIG_MISC_EXCLUDE
-                  value: "privacylevel,etc_dnsmasq_d"
-                - name: SYNC_GRAVITY_GROUP
-                  value: "true"
-                - name: SYNC_GRAVITY_AD_LIST
-                  value: "true"
-                - name: SYNC_GRAVITY_AD_LIST_BY_GROUP
-                  value: "true"
-                - name: SYNC_GRAVITY_DOMAIN_LIST
-                  value: "true"
-                - name: SYNC_GRAVITY_DOMAIN_LIST_BY_GROUP
-                  value: "true"
-                - name: SYNC_GRAVITY_CLIENT
-                  value: "true"
-                - name: SYNC_GRAVITY_CLIENT_BY_GROUP
-                  value: "true"
+                  # value: "false"
+                # - name: SYNC_CONFIG_DNS
+                #   value: "true"
+                # - name: SYNC_CONFIG_DNS_EXCLUDE
+                #   value: "upstreams,piholePTR,domainNeeded,domain,bogusPriv,dnssec,listeningMode,revServers,cache.size,reply.host.force4,reply.host.IPv4"
+                # - name: SYNC_CONFIG_RESOLVER
+                #   value: "true"
+                # - name: SYNC_CONFIG_DATABASE
+                #   value: "true"
+                # - name: SYNC_CONFIG_DATABASE_EXCLUDE
+                #   value: "maxDBdays"
+                # - name: SYNC_CONFIG_MISC
+                #   value: "true"
+                # - name: SYNC_CONFIG_MISC_EXCLUDE
+                #   value: "privacylevel,etc_dnsmasq_d"
+                # - name: SYNC_GRAVITY_GROUP
+                #   value: "true"
+                # - name: SYNC_GRAVITY_AD_LIST
+                #   value: "true"
+                # - name: SYNC_GRAVITY_AD_LIST_BY_GROUP
+                #   value: "true"
+                # - name: SYNC_GRAVITY_DOMAIN_LIST
+                #   value: "true"
+                # - name: SYNC_GRAVITY_DOMAIN_LIST_BY_GROUP
+                #   value: "true"
+                # - name: SYNC_GRAVITY_CLIENT
+                #   value: "true"
+                # - name: SYNC_GRAVITY_CLIENT_BY_GROUP
+                #   value: "true"
                 - name: RUN_GRAVITY
-                  value: "false"
-                - name: CLIENT_SKIP_TLS_VERIFICATION
                   value: "true"
+                  # value: "false"
+                # - name: CLIENT_SKIP_TLS_VERIFICATION
+                #   value: "true"
                 - name: TZ
                   value: "Europe/Berlin"
-                - name: CLIENT_TIMEOUT_SECONDS
-                  value: "60"
-                - name: CLIENT_RETRY_DELAY_SECONDS
-                  value: "60"
+                # - name: CLIENT_TIMEOUT_SECONDS
+                #   value: "60"
+                # - name: CLIENT_RETRY_DELAY_SECONDS
+                #   value: "60"
               args:
                 - "run"
               envFrom:
