--- a/apps/base/forgejo/manifest.yaml
+++ b/apps/base/forgejo/manifest.yaml
@@ -41,9 +41,6 @@ spec:
       interval: 12h
   values:
     gitea:
-      additionalConfigSources:
-        - secret:
-            secretName: database
       admin:
         existingSecret: forgejo-admin-secret
     persistence:
@@ -65,6 +62,10 @@ spec:
         - secretName: forgejo-lan-vandelocht-uk-production-tls
           hosts:
             - forgejo.lan.vandelocht.uk
+  valuesFrom:
+    - kind: Secret
+      name: values-forgejo-secret
+      valuesKey: values.yaml
 ---
 apiVersion: postgresql.cnpg.io/v1
 kind: Cluster
