forgejo: changed upgrade strategy to recreate

--- a/apps/base/forgejo/manifest.yaml
+++ b/apps/base/forgejo/manifest.yaml
@@ -40,6 +40,8 @@ spec:
         namespace: forgejo
       interval: 12h
   values:
+    strategy:
+      type: Recreate
     gitea:
       admin:
         existingSecret: forgejo-admin-secret
