--- a/infrastructure/production/metallb/config/addressPool.yaml
+++ b/infrastructure/production/metallb/config/addressPool.yaml
@@ -14,6 +14,19 @@ spec:
 apiVersion: metallb.io/v1beta1
 kind: IPAddressPool
 metadata:
+  name: forgejo
+  namespace: metallb-system
+spec:
+  addresses:
+    - 192.168.178.155/32
+  serviceAllocation:
+    priority: 50
+    namespaces:
+      - forgejo
+---
+apiVersion: metallb.io/v1beta1
+kind: IPAddressPool
+metadata:
   name: prometheus-push
   namespace: metallb-system
 spec:
