--- a/clusters/staging/apps/kustomization.yaml
+++ b/clusters/staging/apps/kustomization.yaml
@@ -4,7 +4,7 @@ resources:
   - immich.yaml
   - matrix.yaml
   - ntfy.yaml
-  - endurain.yaml
+  # - endurain.yaml
   # - openwebui.yaml
   # - searxng.yaml
   - website.yaml
