--- a/renovate.json
+++ b/renovate.json
@@ -101,6 +101,13 @@
       "matchDatasources": ["helm"],
       "matchUpdateTypes": ["minor", "patch"],
       "automerge": true
+    },
+    {
+      "description": "Automerge minor and patch updates for Immich",
+      "matchPackageNames": ["ghcr.io/immich-app/immich-server"],
+      "matchDatasources": ["docker"],
+      "matchUpdateTypes": ["minor", "patch"],
+      "automerge": true
     }
   ]
 }
