--- a/apps/production/forgejo/ingressConfig.yaml
+++ b/apps/production/forgejo/ingressConfig.yaml
@@ -1,13 +1,13 @@
 apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
-  name: forgejo-lan-vandelocht-uk
+  name: git-vandelocht-uk
   namespace: forgejo
 spec:
-  secretName: forgejo-lan-vandelocht-uk-production-tls
+  secretName: git-vandelocht-uk-production-tls
   issuerRef:
     name: letsencrypt-production
     kind: ClusterIssuer
-  commonName: "forgejo.lan.vandelocht.uk"
+  commonName: "git.vandelocht.uk"
   dnsNames:
-    - "forgejo.lan.vandelocht.uk"
+    - "git.vandelocht.uk"
