Added datasource to forgjo renovate config

--- a/renovate.json
+++ b/renovate.json
@@ -71,6 +71,7 @@
     },
     {
       "matchPackageNames": ["forgejo"],
+      "matchDatasources": ["helm"],
       "matchUpdateTypes": ["minor", "patch"],
       "automerge": true
     },
