--- a/apps/base/immich/manifest.yaml
+++ b/apps/base/immich/manifest.yaml
@@ -33,7 +33,7 @@ spec:
   chart:
     spec:
       chart: immich
-      version: "0.9.3"
+      version: "0.10.0"
       sourceRef:
         kind: HelmRepository
         name: immich
@@ -46,7 +46,7 @@ spec:
       persistence:
         library:
           existingClaim: immich-pvc
-    redis:
+    valkey:
       enabled: true
       master:
         resources:
