immich: fixed db env variables
fix

--- a/apps/base/immich/manifest.yaml
+++ b/apps/base/immich/manifest.yaml
@@ -48,11 +48,20 @@ spec:
           existingClaim: immich-pvc
     valkey:
       enabled: true
-    env:
-      DB_HOSTNAME: immich-postgres-cluster-rw
-      DB_USERNAME: immich
-      DB_DATABASE_NAME: immich
-      DB_VECTOR_EXTENSION: pgvector
+    server:
+      controllers:
+        main:
+          containers:
+            main:
+              env:
+                DB_HOSTNAME:
+                  value: immich-postgres-cluster-rw
+                DB_USERNAME:
+                  value: immich
+                DB_DATABASE_NAME:
+                  value: immich
+                DB_VECTOR_EXTENSION:
+                  value: pgvector
   valuesFrom:
     - kind: Secret
       name: values-immich-secret
