--- a/renovate.json
+++ b/renovate.json
@@ -118,6 +118,13 @@
       "automerge": true
     },
     {
+      "description": "Automerge minor and patch updates for matrix-synapse Helm chart",
+      "matchPackageNames": ["matrix-synapse"],
+      "matchDatasources": ["helm"],
+      "matchUpdateTypes": ["minor", "patch"],
+      "automerge": true
+    },
+    {
       "description": "Automerge minor and patch updates for all Flux components",
       "matchPackagePatterns": ["^flux", "fluxcd"],
       "matchUpdateTypes": ["minor", "patch"],
