--- a/renovate.json
+++ b/renovate.json
@@ -125,6 +125,13 @@
       "automerge": true
     },
     {
+      "description": "Automerge minor and patch updates for cert-manager Helm chart",
+      "matchPackageNames": ["cert-manager"],
+      "matchDatasources": ["helm"],
+      "matchUpdateTypes": ["minor", "patch"],
+      "automerge": true
+    },
+    {
       "description": "Automerge minor and patch updates for all Flux components",
       "matchPackagePatterns": ["^flux", "fluxcd"],
       "matchUpdateTypes": ["minor", "patch"],
