--- a/renovate.json
+++ b/renovate.json
@@ -132,6 +132,13 @@
       "automerge": true
     },
     {
+      "description": "Automerge minor and patch updates for matrix-synapse-s3 Docker image",
+      "matchPackageNames": ["ghcr.io/dotwee/matrix-synapse-s3"],
+      "matchDatasources": ["docker"],
+      "matchUpdateTypes": ["minor", "patch"],
+      "automerge": true
+    },
+    {
       "description": "Automerge minor and patch updates for all Flux components",
       "matchPackagePatterns": ["^flux", "fluxcd"],
       "matchUpdateTypes": ["minor", "patch"],
